<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">US Coin Collection</string>
    <string name="version">Version: %1$s (%2$d)</string>
    <string name="license">License: GPL v3</string>
    <string name="title_section_statistics">Statistics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_open">Open</string>
    <string name="action_download">Download</string>
    <string name="action_settings">Settings</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_about">About</string>
    <string name="file_chooser">Select a file</string>
    <string name="could_not_open_database">Could not open database</string>
    <string name="could_not_download_list">Could not download catalogues list</string>
    <string name="could_not_download_file">Could not download catalogue</string>
    <string name="could_not_create_file">Could not create database</string>
    <string name="could_not_parse_list">Could not parse catalogues list</string>
    <string name="could_not_open_sd">File access to the SD card is restricted on your device. Try to move file to internal memory.</string>
    <string name="country">Country</string>
    <string name="mintage">Mintage</string>
    <string name="subject_short">Subject</string>
    <string name="denomination">Denomination</string>
    <string name="series">Series</string>
    <string name="date_of_issue">Date of issue</string>
    <string name="year">Year</string>
    <string name="price">Price</string>
    <string name="material">Material</string>
    <string name="cancel">Cancel</string>
    <string name="overwrite">Overwrite</string>
    <string name="save">Save</string>
    <string name="change_count">Change coins count</string>
    <string name="not_implemented_for_desktop">Not yet implemented for desktop version of collection</string>
    <string name="downloading">Downloading</string>
    <string name="download">Download catalog</string>
    <string name="where_first">Where from get collection for working?</string>
    <string name="open">Open existent</string>
    <string name="replace">File already exists. Overwrite it?</string>
    <string name="new_db_version">Catalog in a new format. Please update application.</string>
    <string name="old_db_version">Catalog in a old unsupported format. Please update catalog.</string>
    <string name="upgraded_db_version">Updated catalgue structure.</string>
    <string name="new_xml_version">Catalogs list in a new format. Please update application.</string>
    <string name="sort_coins">Sort coins</string>
    <string-array name="sorts">
        <item>By date (old first)</item>
        <item>By date (newest first)</item>
    </string-array>
    <string-array name="sort_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="show_zero">Show add button</string>
    <string name="show_zero_desc">Show \"+\" for not collected coins</string>
    <string name="density">Density of the display</string>
    <string-array name="densities">
        <item>MDPI</item>
        <item>HDPI</item>
        <item>XHDPI</item>
        <item>XXHDPI</item>
    </string-array>
    <string name="use_grading">Grading</string>
    <string name="ok">OK</string>
    <string name="fine">Fine</string>
    <string name="very_fine">Very Fine</string>
    <string name="extremely_fine">Extremely Fine</string>
    <string name="about_uncirculated">About Uncirculated</string>
    <string name="uncirculated">Uncirculated</string>
    <string name="F">F</string>
    <string name="VF">VF</string>
    <string name="XF">XF</string>
    <string name="AU">AU</string>
    <string name="Unc">Unc</string>
    <string name="visit_homepage">Visit homepage</string>
    <string name="filter_all">All</string>
    <string name="filter_empty">Empty</string>
    <string name="filter_all_series">All series</string>
    <string name="filter_all_countries">All countries</string>
    <string name="filter_empty_series">Without series</string>
    <string name="filter_field">Filter by</string>
    <string-array name="filter_fields">
        <!--item>Country</item-->
        <item>Denomination</item>
        <item>Series</item>
    </string-array>
    <string-array name="filter_field_vals">
        <!--item>country</item-->
        <item>unit</item>
        <item>series</item>
    </string-array>
    <string-array name="navigation_drawer_items">
        <item>Collection</item>
        <item>Statistics</item>
    </string-array>
    <string name="total_count">Total count</string>
    <string name="collected_count">Collected</string>
    <string name="coins_count">Coins count</string>
    <string name="action_update">Update</string>
    <string name="apply_update">New update are available</string>
    <string name="apply">Apply</string>
    <string name="no_updates_available">No updates available</string>
    <string name="mint">Mint</string>
    <string name="auto_update">Check for updates automatically</string>
    <string name="available_update">Update is available</string>
    <string name="not_connected">Internet connection not available</string>
    <string name="use_external">Save on external storage</string>
    <string name="download_ext">Before start we should download %1$s catalog from web (%2$s)</string>
    <string name="use_grading_desc">Show coins grading</string>
    <string name="use_mint">Mint</string>
    <string name="use_mint_desc">Separate coins by mint</string>
    <string name="cant_open">Could not open catalog</string>
    <string name="try_again">Try again</string>
    <string name="download_new">Download new</string>
    <string name="action_filter">Filter</string>
    <string name="filter_present">Is present</string>
    <string name="filter_need">Is needed</string>
    <string name="filter_for_change">For change (>1)</string>
    <string name="filter_not_unc">Present, but not Unc</string>
    <string name="version_data">Catalogue version: %1$s</string>
    <string name="facebook">Facebook</string>
    <string name="rate">Rate in Google Play</string>
    <string name="unknown">unknown</string>
</resources>
