<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <CheckBoxPreference
        android:key="use_grading"
        android:defaultValue="false"
        android:title="@string/use_grading" />
    <ListPreference
        android:key="sort_order"
        android:entries="@array/sorts"
        android:entryValues="@array/sort_values"
        android:defaultValue="0"
        android:summary="%s"
        android:title="@string/sort_coins">
    </ListPreference>
    <CheckBoxPreference
        android:key="show_zero"
        android:defaultValue="true"
        android:summary="@string/show_zero_desc"
        android:title="@string/show_zero">
    </CheckBoxPreference>
    <ListPreference
        android:key="density"
        android:entries="@array/densities"
        android:entryValues="@array/densities"
        android:defaultValue="0"
        android:summary="%s"
        android:title="@string/density">
    </ListPreference>
    <!--EditTextPreference
        android:key="address"
        android:summary="Address for notifications"
        android:title="Address">
    </EditTextPreference-->
</PreferenceScreen>