<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_example"
        android:title="@string/action_example"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_open"
        android:title="@string/action_open"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_download"
        android:title="@string/action_download"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="200"
        android:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="300"
        android:showAsAction="never" />
</menu>
